<resources>
    <string name="app_name">Collision Alert</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="dots_menu">Pop Menu Button</string>
    <string name="back_arrow">Back Arrow Button</string>

    <string name="action_exit">Exit</string>
    <string name="App_Settings">com.example.katerina.collisionalert.R.xml.app_settings_file</string>

    <string name="light_sensor">Light Sensor</string>
    <string name="seek_light">Light Sensor Seekbar</string>
    <string name="seek_light_time">Light Sensor Time Interval Seekbar</string>

    <string name="proximity_sensor">Proximity Sensor</string>
    <string name="seek_proximity">Proximity Sensor Seekbar</string>
    <string name="seek_proximity_time">Proximity Sensor Time Interval Seekbar</string>

    <string name="accelerator_sensor">Accelerator Sensor</string>
    <string name="accelerator_sensor_X">Accelerator Sensor X axis</string>
    <string name="seek_accelerator_X">Accelerator Sensor Seekbar X axis</string>
    <string name="seek_accelerator_time">Accelerator Sensor Time Interval Seekbar </string>

    <string name="accelerator_sensor_Y">Accelerator Sensor Y axis</string>
    <string name="seek_accelerator_Y">Accelerator Sensor Seekbar Y axis</string>

    <string name="accelerator_sensor_Z">Accelerator Sensor Z axis</string>
    <string name="seek_accelerator_Z">Accelerator Sensor Seekbar Z axis</string>





</resources>
